# particle-life-simulator

./: .gitignore  .voidrules  Cargo.toml  LICENSE  README.MD
src/: main.rs
src/particle/: mod.rs
src/simulation/: interaction_matrix.rs  mod.rs  quadtree.rs
src/utils/: math.rs
