[package]
name = "particle-life-simulator"
version = "0.1.0"
edition = "2021"
description = "A high-performance particle life simulation game in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# Game framework
ggez = "0.9"
glam = "0.24"

# Math and utilities
rand = "0.8"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and parallelism
rayon = "1.7"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property testing
proptest = "1.2"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
debug = true